2010-08-31  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc:               Typo (thanks to Twylite discovering this)
	* generic/tclStubLib.c:       Revert to previous version: MSVC++ 6.0
	* generic/tclTomMathStubLib.c:cannot handle the new construct.
	* generic/tcl.decls           [Patch 2997642] many type casts needed when
	* generic/tclDecls.h:         using Tcl_Pkg* API. Remaining part.
	* generic/tclPkg.c:
	* generic/tclBasic.c:
	* generic/tclTomMathInterface.c:
	* doc/PkgRequire.3

2010-08-31  Andreas Kupries  <andreask@activestate.com>

	* win/tcl.m4: Applied patch by Jeff fixing issues with the
	manifest handling on Win64.
	* win/configure: Regenerated.

2010-08-30  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:    New implementation for [tailcall]:
	* generic/tclCmdAH.c:    it now schedules the command and returns 
	* generic/tclCmdMZ.c:    TCL_RETURN. This fixes all issues with
	* generic/tclExecute.c:  [catch] and [try] - [Bug 3046594],  
	* generic/tclInt.h:      [Bug 3047235] and [Bug 3048771]. Thanks
	* generic/tclNamesp.c:   dgp for exploring the dark corners. 
	* tests/tailcall.test:   More thorough testing is required.

2010-08-30  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in:   [Freq 2965056]: Windows build with -DUNICODE
	* win/rules.vc:
	* win/tclWinFCmd.c:  Make sure that allocated TCHAR arrays are
	* win/tclWinFile.c:  always properly aligned as wchar_t, and
	* win/tclWinPipe.c:  not bigger than necessary.
	* win/tclWinSock.c:
	* win/tclWinDde.c:   Those 3 files are not converted yet to be
	* win/tclWinReg.c:   built with -DUNICODE, so add a TODO.
	* win/tclWinTest.c:
	* generic/tcl.decls:  [Patch 2997642] many type casts needed when
	* generic/tclDecls.h: using Tcl_Pkg* API. Partly.
	* generic/tclPkg.c:
	* generic/tclStubLib.c: demonstration how this change can benefit code.
	* generic/tclTomMathStubLib.c:
	* doc/PkgRequire.3

2010-08-29  Donal K. Fellows  <dkf@users.sf.net>
